--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -224,6 +224,10 @@ pl:
     errors:
       <<: *errors
 
+  year: rok
+  years: lat
+  months: miesiące
+  month: miesiac
   days: dni
   hours: godz.
   minutes: min.
